--- a/blog/templates/blog/post_details.html
+++ b/blog/templates/blog/post_details.html
@@ -5,18 +5,19 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Blog</title>
+    <title>Post Details</title>
 </head>
 <body>
     <div class="header">
         <h1> 안녕 세상아 ~ ~ </h1>
     </div>
-    {% for post in posts %}
     <div>
-        <p> {{ post.published_date }} </p>
-        <h2><a href="{% url 'post_details' primary_key=post.pk %}"> {{ post.title }} </a></h2>
-        <p> {{ post.text | linebreaksbr }} </p>
+        {% if post_details.published_date %}
+            <div>{{ post_details.published_date }}</div>
+            <h1>{{ post_details.title }}</h1>
+            <p>{{ post_details.text | linebreaksbr }}</p>
+            <h3>By : {{ post_details.author }}</h3>
+        {% endif %}
     </div>
-    {% endfor %}
 </body>
 </html>
