--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,16 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Blog</title>
-</head>
-<body>
-    <div class="header">
-        <h1> 안녕 세상아 ~ ~ </h1>
-    </div>
+{% extends 'blog/base_page.html' %}
+
+{% block content %}
     {% for post in posts %}
     <div>
         <p> {{ post.published_date }} </p>
@@ -18,5 +8,4 @@
         <p> {{ post.text | linebreaksbr }} </p>
     </div>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
