--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -11,6 +11,10 @@ body a{
     background-color: darkslateblue;
     margin-top: 0;
     padding: 20px 20px 20px 20px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 40px;
+    font-style: bold;
 }
 .header a{
     color: lightsteelblue;
@@ -22,7 +26,7 @@ body a{
 .content-container{
     display: flex;
     flex-direction: column;
-    max-width: 70vw;
+    max-width: 65vw;
     margin-top: 20px;
 }
 
@@ -37,4 +41,16 @@ body a{
 .author{
     font-style: italic;
     font-size: 20px;
+}
+
+.create-form button{
+    float: right;
+}
+
+.create-form input{
+    width: 100%;
+}
+
+.create-form textarea{
+    width: 100%;
 }
