--- a/blog/templates/blog/base_page.html
+++ b/blog/templates/blog/base_page.html
@@ -1,11 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
@@ -16,7 +12,8 @@
 </head>
 <body>
     <div class="header">
-        <h1><a href="{% url 'post_list' %}"> 안녕 세상아 ~ ~ </a></h1>
+        <div><a href="{% url 'post_list' %}"> 안녕 세상아 ~ ~ </a></div>
+        <div><a href="{% url 'post_new' %}">+</a></div>
     </div>
 
     <div class="content-container">
