--- a/blog/templates/blog/post_details.html
+++ b/blog/templates/blog/post_details.html
@@ -6,8 +6,8 @@
         <div class="details-header-row">
             <p class="date">{{ post_details.published_date }}</p>
             <div>
-                <i class="fas fa-edit"></i>
-                <i class="fas fa-trash"></i>
+                <a href="{% url 'post_edit' primary_key=post_details.pk %}"><i class="fas fa-edit"></i></a>
+                <a href="{% url 'post_delete' primary_key=post_details.pk %}"><i class="fas fa-trash"></i></a>
             </div>
         </div>
         <h1 class="details-title">{{ post_details.title }}</h1>
