--- a/blog/templates/blog/base_page.html
+++ b/blog/templates/blog/base_page.html
@@ -16,7 +16,9 @@
     <div class="header">
         <div><a href="{% url 'post_list' %}"> 안녕 세상아 ~ ~ </a></div>
         <div>
-            <a href="{% url 'post_new' %}" data-toggle="tooltip" title="Create a new post"><i class="fas fa-plus-circle"></i></a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" data-toggle="tooltip" title="Create a new post"><i class="fas fa-plus-circle"></i></a>
+            {% endif %}
             <a href="{% url 'post_new' %}"><i class="fas fa-user-circle"></i></a>
         </div>
     </div>
