added functionality to create and publish drafts

--- a/blog/templates/blog/post_details.html
+++ b/blog/templates/blog/post_details.html
@@ -1,20 +1,29 @@
 {% extends 'blog/base_page.html' %}
 
 {% block content %}
-    {% if post_details.published_date %}
     <div class="">
         <div class="details-header-row">
-            <p class="date">{{ post_details.published_date }}</p>
-            <div>
-                {% if user.is_authenticated %}
-                    <a href="{% url 'post_edit' primary_key=post_details.pk %}"><i class="fas fa-edit"></i></a>
-                    <a href="{% url 'post_delete' primary_key=post_details.pk %}"><i class="fas fa-trash"></i></a>
-                {% endif %}
-            </div>
+            {% if post_details.published_date %}
+                <p class="date">Published: {{ post_details.published_date }}</p>
+                <div>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'post_edit' primary_key=post_details.pk %}"><i class="fas fa-edit"></i></a>
+                        <a href="{% url 'post_delete' primary_key=post_details.pk %}"><i class="fas fa-trash"></i></a>
+                    {% endif %}
+                </div>
+            {% else %}
+                <p class="date">Created: {{ post_details.created_date }}</p>
+                <div>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'post_publish' primary_key=post_details.pk %}" data-toggle="tooltip" title="Publish"><i class="fas fa-upload"></i></a>
+                        <a href="{% url 'post_edit' primary_key=post_details.pk %}" data-toggle="tooltip" title="Edit"><i class="fas fa-edit"></i></a>
+                        <a href="{% url 'post_delete' primary_key=post_details.pk %}" data-toggle="tooltip" title="Delete"><i class="fas fa-trash"></i></a>
+                    {% endif %}
+                </div>
+            {% endif %}
         </div>
         <h1 class="details-title">{{ post_details.title }}</h1>
         <p class="details-text">{{ post_details.text | linebreaksbr }}</p>
         <p class="details-author">By : {{ post_details.author }}</p>
     </div>
-    {% endif %}
 {% endblock %}
