--- a/blog/templates/blog/base_page.html
+++ b/blog/templates/blog/base_page.html
@@ -18,6 +18,7 @@
         <div>
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" data-toggle="tooltip" title="Create a new post"><i class="fas fa-plus-circle"></i></a>
+                <a href="{% url 'post_draft_list' %}" data-toggle="tooltip" title="View Drafts"><i class="fas fa-file-alt"></i></a>
             {% endif %}
             <a href="{% url 'post_new' %}"><i class="fas fa-user-circle"></i></a>
         </div>
