--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,7 +3,11 @@
 {% block content %}
     {% for post in posts %}
     <div class="row-content">
-        <p class="date"> {{ post.published_date }} </p>
+        {% if post.published_date %}
+            <p class="date">Published: {{ post.published_date }} </p>
+        {% else %}
+            <p class="date">Created: {{ post.created_date }} </p>
+        {% endif %}
         <h2><a href="{% url 'post_details' primary_key=post.pk %}"> {{ post.title }} </a></h2>
         <p> {{ post.text | linebreaksbr }} </p>
     </div>
