formatted dates and added login/logout functionality

--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -95,3 +95,10 @@ body a{
     padding: 20px;
     font-size: 40px;
 }
+
+.errorlist{
+    color: red;
+    background-color: lightpink;
+    border-radius: 20px;
+    font-size: 20px;
+}
