--- a/blog/templates/blog/post_details.html
+++ b/blog/templates/blog/post_details.html
@@ -4,7 +4,7 @@
     <div class="">
         <div class="details-header-row">
             {% if post_details.published_date %}
-                <p class="date">Published: {{ post_details.published_date }}</p>
+                <p class="date">Published: {{ post_details.published_date|date:'d-m-Y' }}</p>
                 <div>
                     {% if user.is_authenticated %}
                         <a href="{% url 'post_edit' primary_key=post_details.pk %}"><i class="fas fa-edit"></i></a>
@@ -12,7 +12,7 @@
                     {% endif %}
                 </div>
             {% else %}
-                <p class="date">Created: {{ post_details.created_date }}</p>
+                <p class="date">Created: {{ post_details.created_date|date:'d-m-Y' }}</p>
                 <div>
                     {% if user.is_authenticated %}
                         <a href="{% url 'post_publish' primary_key=post_details.pk %}" data-toggle="tooltip" title="Publish"><i class="fas fa-upload"></i></a>
