--- a/blog/templates/blog/base_page.html
+++ b/blog/templates/blog/base_page.html
@@ -19,8 +19,10 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" data-toggle="tooltip" title="Create a new post"><i class="fas fa-plus-circle"></i></a>
                 <a href="{% url 'post_draft_list' %}" data-toggle="tooltip" title="View Drafts"><i class="fas fa-file-alt"></i></a>
+                <a href="{% url 'logout' %}" data-toggle="tooltip" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
+            {% else %}
+                <a href="{% url 'login' %}" data-toggle="tooltip" title="Login"><i class="fas fa-sign-in-alt"></i></a>
             {% endif %}
-            <a href="{% url 'post_new' %}"><i class="fas fa-user-circle"></i></a>
         </div>
     </div>
     <div class="content-container">
