--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,12 +5,12 @@
         {% for post in posts %}
             <div class="row-content">
                 {% if post.published_date %}
-                    <p class="date">Published: {{ post.published_date }} </p>
+                    <p class="date">Published: {{ post.published_date|date:'d-m-Y' }} </p>
                 {% else %}
-                    <p class="date">Created: {{ post.created_date }} </p>
+                    <p class="date">Created: {{ post.created_date|date:'d-m-Y' }} </p>
                 {% endif %}
                 <h2><a href="{% url 'post_details' primary_key=post.pk %}"> {{ post.title }} </a></h2>
-                <p> {{ post.text | linebreaksbr }} </p>
+                <p> {{ post.text | truncatechars:50 }} </p>
             </div>
         {% endfor %}
     {% else %}
