footer added with logged in username

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -15,7 +15,7 @@
         {% endfor %}
     {% else %}
     <div class="no-posts-message">
-        <div><i class="fas fa-check-circle"></i></div>
+        <div><i class="fas fa-info-circle"></i></div>
         <div>No Posts to view!</div>
     </div>
     {% endif %}
