--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -13,7 +13,7 @@ body a{
     padding: 20px 20px 20px 20px;
     display: flex;
     justify-content: space-between;
-    font-size: 40px;
+    font-size: 30px;
     font-style: bold;
 }
 .header a{
@@ -21,6 +21,24 @@ body a{
 }
 .header a:hover{
     text-shadow: 0.5px 1px lightsteelblue;
+}
+
+.footer{
+    background-color: darkslateblue;
+    padding: 10px 20px 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 8vh;
+}
+
+
+.logged-in-user, .copyright{
+    font-style: italic;
+    font-size: 20px;
+    color: lightsteelblue;
 }
 
 .content-container{
@@ -84,7 +102,7 @@ body a{
     flex-direction: column;
     justify-content: center;
     max-width: 100%;
-    height: 80vh;
+    height: 75vh;
     margin: auto;
     background: whitesmoke;
     border-radius: 40px;
