--- a/blog/templates/blog/base_page.html
+++ b/blog/templates/blog/base_page.html
@@ -31,6 +31,12 @@
             {% endblock %}
         </div>
     </div>
+    <div class="footer">
+        <span class="copyright"><i class="far fa-copyright"></i> Maclyn Afonso 2019-2021</span>
+        {% if user.is_authenticated %}
+            <span class="logged-in-user">Logged in as {{ user.username }}</span>
+        {% endif %}
+    </div>
 
     <script>
     $(document).ready(function(){
