--- a/blog/templates/blog/post_details.html
+++ b/blog/templates/blog/post_details.html
@@ -24,6 +24,30 @@
         </div>
         <h1 class="details-title">{{ post_details.title }}</h1>
         <p class="details-text">{{ post_details.text | linebreaksbr }}</p>
-        <p class="details-author">By : {{ post_details.author }}</p>
+        <p class="details-author">Author : {{ post_details.author }}</p>
+        <div class="comments-container">
+            <span class="comment-header"><i class="fas fa-comments"></i> {{ comments|length }} Comments</span>
+            {% for comment in comments %}
+                <div class="comment-body">
+                    <div class="comment-date">{{ comment.created_date|date:'d-m-Y' }}</div>
+                    <div class="comment-author">{{ comment.author }}</div>
+                    <div>{{ comment.text }}</div>
+                    <div>
+                        <a href="{% url 'like_comment' primary_key=post_details.pk comment_key=comment.id %}" class="like"><i class="fas fa-thumbs-up"></i> {{ comment.likes }}</a>
+                        <a href="{% url 'dislike_comment' primary_key=post_details.pk comment_key=comment.id %}" class="dislike"><i class="fas fa-thumbs-down"></i> {{ comment.dislikes }}</a>
+                        <a href="{% url 'delete_comment' primary_key=post_details.pk comment_key=comment.id %}" class="delete"><i class="fas fa-trash"></i></a>
+                    </div>
+                </div>
+            {% endfor %}
+            {% if user.is_authenticated %}
+                <div class="comment-form">
+                    <form action="{% url 'comment_create' primary_key=post_details.pk %}" method="post">
+                        {% csrf_token %}
+                        <input type="text" name="text" placeholder="Type a comment here...">
+                        <button type="submit" class="btn btn-primary"><i class="fas fa-paper-plane"></i></button>
+                    </form>
+                </div>
+            {% endif %}
+        </div>
     </div>
 {% endblock %}
